--- a/src/app/display-product/display-product.component.scss
+++ b/src/app/display-product/display-product.component.scss
@@ -1,13 +1,109 @@
 .display-product-container{
-    table{
-        border-collapse: collapse;
-        th, td{
-            width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    .display-product-header{
+        font-size: 400%;
+        margin-top: 0px;
+        margin-bottom: 40px;
+        letter-spacing: 6px;
+    }
+    .display-product-body{
+        width: 90%;
+        
+        .toppage{
+            display: flex;
+            align-self: baseline;
+            .trapezoid{
+                cursor: pointer;
+                border-bottom: 30px solid rgb(255, 255, 255);
+                border-left: 25px solid transparent;
+                border-right: 25px solid transparent;
+                height: 0;
+                width: 125px;
+                span{
+                    position: relative;
+                    top: 4px;
+                }
+            }
+            .trapezoid:hover{
+                border-bottom: 30px solid rgb(215, 242, 255);
+            }
+            .trapezoid-active{
+                cursor: auto;
+                border-bottom: 30px solid rgb(200, 200, 200);
+            }
+            .trapezoid-active:hover{
+                border-bottom: 30px solid rgb(200, 200, 200);
+            }
+            .trapezoid::after{
+                content: '';
+                display: flex;
+                position: relative;
+
+                border-bottom: 32px solid rgb(0, 0, 0);
+                border-left: 27px solid transparent;
+                border-right: 27px solid transparent;
+                height: 0;
+                width: 125px;
+                bottom: 26px;
+                right: 24px;
+                z-index: -1;
+            }
+        }
+
+        .bodypage{
+            background-color: white;
             border: 1px black solid;
+            padding: 20px 0 40px 0;
+            border-radius: 0 0 20px 20px;
+
+            .box-mode{
+
+            }
+            .table-mode{
+
+            }
         }
     }
+}
 
-    .product-img{
-        width: 200px;
+.lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    margin-top: 80px;
+
+    div {
+        box-sizing: border-box;
+        display: block;
+        position: absolute;
+        width: 64px;
+        height: 64px;
+        margin: 8px;
+        border: 8px solid #fff;
+        border-radius: 50%;
+        animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+        border-color: rgb(0, 255, 170) transparent transparent transparent;
+    }
+    div:nth-child(1) {
+        animation-delay: -0.45s;
+    }
+    div:nth-child(2) {
+        animation-delay: -0.3s;
+    }
+    div:nth-child(3) {
+        animation-delay: -0.15s;
+    }
+    @keyframes lds-ring {
+        0% {
+        transform: rotate(0deg);
+        }
+        100% {
+        transform: rotate(360deg);
+        }
     }
 }
