--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@200;300;400;500;600;700&display=swap');
+
+body{
+    background-image: url("assets/background.png");
+    background-size: cover;
+    font-family: 'Prompt', sans-serif;
+}
