add box, display final

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <router-outlet></router-outlet>
-<div *ngIf="displayFloating" class="floating-logo">
-    <button (click)="disableFloating()">X</button>
+<!-- <div *ngIf="displayFloating" class="floating-logo">
+    <div class="floating">
+        <button (click)="disableFloating()">X</button>
+    </div>
     <img src="assets/logo.png" alt="logo">
-</div>
+</div> -->
 
 <app-display-product></app-display-product>
