--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,29 @@
     width: 10%;
     right: 2%;
     bottom: 2%;
+
+    display: flex;
+    flex-direction: column;
+
+    .floating{
+        position: absolute;
+        button{
+            position: relative;
+            left: 7.6em;
+            cursor: pointer;
+            border-radius: 100%;
+            background-color: rgb(255, 255, 255);
+            width: 26px;
+            height: 26px;
+            margin-left: auto;
+        }
+        button:hover{
+            background-color: rgb(223, 223, 223);
+        }
+    }
+
+    
+
     img{
         width: 100%;
     }
