--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,6 @@ body{
     background-image: url("assets/background.png");
     background-size: cover;
     font-family: 'Prompt', sans-serif;
+    padding: 0 0 20px 0;
+    margin: 0;
 }
