--- a/src/app/display-product/display-product.component.html
+++ b/src/app/display-product/display-product.component.html
@@ -1,5 +1,7 @@
 <div class="display-product-container">
-    <h1 class="display-product-header">GaPBy Menu</h1>
+    <div class="display-product-header">
+        <h1>GaPBy Menu</h1>
+    </div>
     <div class="display-product-body">
         <div class="toppage">
             <div [class.trapezoid-active]="mode == 'box'" class="trapezoid" (click)="changemode('box')">
@@ -17,13 +19,13 @@
             <div class="option-menu">
                 <div class="type-select">
                     <label for="products-type">ประเภทสินค้า:</label>
-                    <select #typeSelect (change)="onChange(typeSelect.value); search(searchword.value);" name="products-type" id="products-type">
+                    <select #typeSelect (change)="onChange(typeSelect.value); " name="products-type" id="products-type">
                         <option class="option" *ngFor="let p of typeList" value="{{p}}">{{p}}</option>
                     </select>
                 </div>
                 <div class="search-bar">
                     <div class="floating">
-                        <button (click)="searchword.value = ''" class="search-button">
+                        <button (click)="searchword.value = ''; search(searchword.value);" class="search-button">
                             <img *ngIf="searchword.value.length <= 0" src="assets/magnifying-glass.svg" alt="magnifying-glass">
                             <img *ngIf="searchword.value.length > 0" src="assets/close-icon.svg" alt="clear">
                         </button>
