--- a/src/app/display-product/table-display/table-display.component.html
+++ b/src/app/display-product/table-display/table-display.component.html
@@ -7,13 +7,13 @@
             <th>โปรโมชั่นพิเศษ</th>
             <th>ภาพ</th>
         </tr>
-        <tr *ngFor="let p of products">
+        <tr *ngFor="let p of products" [class.last]="p.left==1" [class.out]="p.left==0">
             <td>{{p.name}}</td>
             <td>{{p.left}}</td>
             <td>{{p.price}}</td>
             <td>{{p.promotion}}</td>
             <td>
-                <img class="product-img" src="{{p.picture}}" alt="{{p.name}}">
+                <img class="product-img" src="{{p.picture}}" alt="{{p.name}}" loading="lazy">
             </td>
         </tr>
     </table>
