--- a/src/app/display-product/table-display/table-display.component.scss
+++ b/src/app/display-product/table-display/table-display.component.scss
@@ -3,20 +3,51 @@
         border-collapse: collapse;
         th, td{
             width: 20%;
-            border-top: 1px black solid;
-            border-bottom: 1px black solid;
-            border-left: 1px black solid;
-            padding: 10px;
+            border: 1px black solid;
+            // padding: 10px;
         }
         th{
             font-size: 16px;
+            background-color: aliceblue;
         }
         td{
             font-size: 14px;
         }
+        .product-img{
+            width: 100%;
+        }
     }
 
-    .product-img{
-        width: 100%;
+
+    .last{
+        background-color: rgb(255, 215, 215);
+    }
+    .out{
+        color: rgb(87, 87, 87);
+        background-color: rgb(193, 193, 193);
+        img{
+            filter: grayscale(70%);
+        }
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .table-container{
+        table{
+            border-collapse: collapse;
+            th, td{
+                width: 20%;
+                border: 1px black solid;
+                padding: 0;
+            }
+            th{
+                font-size: 1.6vw;
+                background-color: aliceblue;
+                padding: 4px 0;
+            }
+            td{
+                font-size: 1.4vw;
+            }
+        }
     }
 }
