--- a/src/app/display-product/display-product.component.html
+++ b/src/app/display-product/display-product.component.html
@@ -26,8 +26,8 @@
                 <div class="search-bar">
                     <div class="floating">
                         <button (click)="searchword.value = ''; search(searchword.value);" class="search-button">
-                            <img *ngIf="searchword.value.length <= 0" src="assets/magnifying-glass.svg" alt="magnifying-glass">
-                            <img *ngIf="searchword.value.length > 0" src="assets/close-icon.svg" alt="clear">
+                            <img *ngIf="searchword.value.length <= 0" src="/assets/magnifying-glass.svg" alt="magnifying-glass">
+                            <img *ngIf="searchword.value.length > 0" src="/assets/close-icon.svg" alt="clear">
                         </button>
                     </div>
                     <input
