--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Itim&family=Prompt:wght@200;300;400;500;600;700&display=swap');
 
 body{
-    background-image: url("assets/background.png");
+    background-image: url("/assets/background.png");
     background-size: cover;
     font-family: 'Prompt', sans-serif;
     padding: 0 0 20px 0;
